tests/NormalTests/paczka1/fuzzy1/19540691.err
Error in line 5: aGeTy8Bx S905 61,59
Error in line 25: ZZGmjB A797 82,3
Error in line 26: ZZGmjB A28 63,1
Error in line 30: ZZGmjB A797 38,7
Error in line 32: ZZGmjB S905 17,3
Error in line 23: FQsd7BI S905 82,5
Error in line 33: ZZGmjB A797 40,5
Error in line 7: aGeTy8Bx S905 14,9
Error in line 31: S905 A28 53,3
